# qrview

./: CMakeLists.txt  imgui.ini  main.cpp  readme.md
docs/: index.html  qrview.js  qrview.wasm
libs/: CMakeLists.txt
src/: main.cpp
